fix: fixed modal height while content height overflowing fix: fixed disappearing of total count label when items with zero price are in cart

--- a/src/components/cart-modal/style.css
+++ b/src/components/cart-modal/style.css
@@ -4,6 +4,9 @@
   border-radius: 10px;
   border: none;
   overflow: hidden;
+  max-height: 90%;
+  display: flex;
+  flex-direction: column;
 }
 
 .CartModal {
@@ -20,4 +23,6 @@
 
 .CartModal-content {
   padding: 70px 0 90px;
+  overflow-y: auto;
+  flex-grow: 1;
 }
